white space side fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,14 @@
   padding: 0;
 }
 
+html, body {
+  width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 html {
 font-size: 62.5%;
 /* We use 62.5% that is equal 10px in a responsive way = easier to use rem */
